# matterstack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  REFACTOR_MAP.md  config.json  pyproject.toml  pytest.ini  results.json  sitecustomize.py
.github/workflows/: ci.yml
artifacts/: baseline_checks.txt  final_checks.txt  linecount_after.txt  linecount_before.txt
docs/: DemoPlan.md  architecture.md  campaigns_and_workspaces.md  evidence_bundles.md  execution_backends.md  experiment_adapter.md  hpc_guide.md  hpc_validation_results.md  integration_guide_for_labs.md  mission_demos.md  operators.md  roadmap.md
docs/CURC/: Alpine_LAMMPS_Guide.md  CURC-ProvidedSoftware.md  HPC_Dev_Guide.md  MonitoringResources.md  pythonR.md
docs/DevGuides/: DevGuide_v0.2.1.md  DevGuide_v0.2.2.md  DevGuide_v0.2.3.md  DevGuide_v0.2.4.md  DevGuide_v0.2.5.md  DevGuide_v0.2.6.md  DevGuide_v0.2.7.7.md  DevGuide_v0.2.7.md  DevGuide_v0.2.md  MXeneShear_v0.2.0.md  UserGuide_v0.2.2.md  v0.2.1_Report.md  v0.2.2_Report.md  v0.2.3_Report.md  v0.2.4_Report.md  v0.2.5_Report.md  v0.2.6_Report.md  v0.2.7_Report.md  v0.2_Report.md
matterstack/: __init__.py
matterstack/ai/: surrogate.py
matterstack/campaign/: __init__.py  engine.py
matterstack/cli/: main.py  operator_registry.py  reset.py  tui.py  utils.py
matterstack/config/: __init__.py  _wiring_legacy.py  _wiring_persistence.py  (+5 more)
plans/: REFACTOR_PLAN.md  cli_main_split_plan.md  run_lifecycle_split_plan.md  state_store_split_plan.md
scripts/: check_max_lines.sh
tests/: conftest.py  hpc_mocks.py  test_campaign_engine.py.bak  test_campaign_loop.py  test_core_basic.py.bak  test_edge_cases.py.bak  test_evidence_export.py.bak  test_example_ht_coatings.py.bak  test_external_task.py  test_gate_task.py  test_hpc_backend.py  test_operators.py.bak  test_orchestration_basic.py  test_profile_slurm.py  test_profiles_and_orchestration.py  test_runtime.py.bak  test_soft_failure.py  test_surrogate.py
tmp_results/: local_backend_state.json
(+405 files in other folders)
