[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matterstack"
version = "0.2.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json>=0.6.7",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "paramiko>=3.4.0",
    "jinja2>=3.1.6",
    "PyYAML>=6.0.1",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
matterstack = "matterstack.cli.main:main"
