[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matterstack"
version = "0.2.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json>=0.6.7",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "paramiko>=3.4.0",
    "jinja2>=3.1.6",
    "PyYAML>=6.0.1",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
matterstack = "matterstack.cli.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter; allow longer comments/strings

[tool.ruff.lint.isort]
known-first-party = ["matterstack"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
